# MineOS-Market-Server

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  check.sh  ci.sh  pyproject.toml  test-requirements.in  test-requirements.txt
.github/workflows/: autodeps.yml  ci.yml  tests.yml
backup/: publications.json  reviews.json
scripts/: import_records.py  prettify.py  result.py
src/market_server/: __init__.py  api.py  backups.py  database.py  generate_pages.py  htmlgen.py  schema.py  security.py  server.py
src/market_server/records/: users.json
src/market_server/static/: debug.html  root.html  site.webmanifest
src/market_server/templates/: base.html.jinja  debug.html.jinja  debug_post.html.jinja  error_page.html.jinja  root.html.jinja  verify.html.jinja
templates/: debug_post.html.jinja  verify.html.jinja
test/: test_htmlgen.py
tests/: test_api.py  test_backups.py  test_database.py  test_htmlgen.py  test_schema.py  test_security.py  test_server_utils.py
